Replace deprecated api calls, added regional support, stay logged in

--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -5,7 +5,7 @@ version '0.1'
 apply plugin: 'groovy'
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'gs-spring-boot'
