--- a/LookingForGroup/src/main/AndroidManifest.xml
+++ b/LookingForGroup/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode">
-        <activity android:name="hu.blog.megosztanam.LoginActivity" android:label="@string/app_name">
+        <activity android:name="hu.blog.megosztanam.login.LoginActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
