Firebase messaging first try

--- a/LookingForGroup/src/main/AndroidManifest.xml
+++ b/LookingForGroup/src/main/AndroidManifest.xml
@@ -29,6 +29,30 @@
 
         </activity>
 
+        <service
+                android:name="hu.blog.megosztanam.messaging.MessagingService"
+                android:enabled="true"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+                android:name="hu.blog.megosztanam.messaging.FirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <meta-data
+                android:name="com.google.firebase.messaging.default_notification_icon"
+                android:resource="@drawable/challenger" />
+        <meta-data
+                android:name="com.google.firebase.messaging.default_notification_color"
+                android:resource="@color/colorPrimaryDark" />
+
+
     </application>
 
 </manifest>
