--- a/LookingForGroup/build.gradle
+++ b/LookingForGroup/build.gradle
@@ -41,6 +41,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.google.gms:google-services:3.0.0'
+
     }
 }
 
@@ -55,16 +56,18 @@ repositories {
 
 }
 dependencies {
+    compile 'com.google.firebase:firebase-core:10.2.4'
+    compile 'com.google.firebase:firebase-messaging:10.2.4'
     compile 'com.github.techfreak:wizardpager:1.0.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:support-v13:25.0.1'
-    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.google.android.gms:play-services-auth:10.2.4'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
