--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -32,6 +32,8 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     compile group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0'
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.11'
