--- a/LookingForGroup/build.gradle
+++ b/LookingForGroup/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'hu.blog.megosztanam:lfg-shared-pojo:0.1'
 
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
