--- a/LookingForGroup/build.gradle
+++ b/LookingForGroup/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
 
 apply plugin: 'com.google.gms.google-services'
