--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -33,6 +33,7 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.3.1.RELEASE'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     compile group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0'
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
