--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'java'
 
 buildscript {
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
+        maven { url 'https://repo1.maven.org/maven2' }
         jcenter()
     }
     dependencies {
@@ -24,10 +24,10 @@ buildscript {
 }
 
 repositories {
-    mavenCentral()
-    maven { url 'http://repo1.maven.org/maven2' }
-    jcenter()
     mavenLocal()
+    mavenCentral()
+    maven { url 'https://repo1.maven.org/maven2' }
+    jcenter()
 
 }
 
@@ -39,7 +39,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     compile group: 'org.json', name: 'json', version: '20160810'
 
     // tag::jetty[]
