--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -27,15 +27,18 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://repo1.maven.org/maven2' }
+    maven { url 'https://maven.google.com/' }
     jcenter()
 
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.google.firebase/firebase-auth
+    compile group: 'com.google.firebase', name: 'firebase-admin', version: '7.1.1'
+
     // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.3.1.RELEASE'
-    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
-    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0'
+    compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
