--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.4.7.RELEASE'
+
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     compile group: 'org.json', name: 'json', version: '20160810'
 
