--- a/LFG_Services/.gitignore
+++ b/LFG_Services/.gitignore
@@ -9,7 +9,7 @@
 *.zip
 *.tar.gz
 *.rar
-
+gradle.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 ### Gradle template
@@ -71,3 +71,4 @@ google-services.json
 
 application.yaml
 
+/src/main/resources/firebase-lookingforgroup-firebase-adminsdk-sgtlc-a7cff7d097.json
