--- a/LookingForGroup/build.gradle
+++ b/LookingForGroup/build.gradle
@@ -1,25 +1,25 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 30
     defaultConfig {
         applicationId "hu.blog.megosztanam"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
+
     signingConfigs {
         release
         config {
-            keyAlias KEY_ALIAS
-            keyPassword KEY_PASSWORD
-            storeFile file(STORE_FILE)
-            storePassword STORE_PASSWORD
+            keyAlias localConf_keyAlias
+            keyPassword localConf_keyPassword
+            storeFile file(localConf_storeFile)
+            storePassword localConf_storePassword
         }
     }
     buildTypes {
@@ -32,52 +32,61 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 buildscript {
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
+        maven { url 'https://repo1.maven.org/maven2' }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.google.gms:google-services:3.0.0'
-
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.google.gms:google-services:4.3.5'
     }
 }
-
-
 
 
 repositories {
-    maven { url 'http://repo1.maven.org/maven2' }
+    maven { url 'https://repo1.maven.org/maven2' }
     maven { url 'https://jitpack.io' }
     jcenter()
     mavenLocal()
+    google()
 
 }
 dependencies {
-    compile 'com.google.firebase:firebase-core:10.2.4'
-    compile 'com.google.firebase:firebase-messaging:10.2.4'
-    compile 'com.github.techfreak:wizardpager:1.0.3'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.google.android.gms:play-services-auth:10.2.4'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.github.techfreak:wizardpager:1.0.3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'junit:junit:4.12'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'hu.blog.megosztanam:lfg-shared-pojo:0.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'hu.blog.megosztanam:lfg-shared-pojo:0.1'
 
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:+'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation group: 'androidx.constraintlayout', name: 'constraintlayout', version: '2.0.4'
+
+    testImplementation group: 'org.robolectric', name: 'robolectric', version: '4.5.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'org.mockito:mockito-core:3.6.28'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.3"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
