--- a/LFG_Services/build.gradle
+++ b/LFG_Services/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compile group: 'com.google.firebase', name: 'firebase-admin', version: '7.1.1'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.3.1.RELEASE'
     compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.0', ext: 'pom'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '2.0-M5-groovy-3.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.4.2.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.4.7.RELEASE'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
